<resources>
    <string name="app_name">PreferencesSingleton</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_address">Address</string>
    <string name="hint_phone">Phone</string>
    <string name="button_text_save">save</string>
</resources>
